--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,6 +2,7 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple">#8692f7</color>
     <color name="colorStrong">#4CAF50</color> <!-- Green for strong password -->
     <color name="colorWeak">#FF9800</color> <!-- Orange for weak password -->
     <color name="colorError">#F44336</color> <!-- Red for error message -->
