--- a/app/src/main/res/layout/otp_layout.xml
+++ b/app/src/main/res/layout/otp_layout.xml
@@ -112,9 +112,7 @@
                 android:hint="Re-Password"
                 app:boxStrokeWidth="0dp"
                 app:boxStrokeWidthFocused="0dp"
-                app:endIconMode="password_toggle"
-
-                >
+                app:endIconMode="password_toggle">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/repassword_user"
